hw6_lab10/tests/errors/sem_and_non_boolean.kt
// EXPECT: semantic error — && on non-Boolean operands
fun main() {
    val r = 1 && 2
}
